# TagFinder

./: README.md  angular.json  package-lock.json  package.json
.angular/cache/17.3.17/tagfinder/: .tsbuildinfo
src/: index.html  styles.scss
src-tauri/: 2  Cargo.toml  tag-finder.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  css_parser.rs  file_walker.rs  lib.rs  main.rs  parallel_processor.rs  progress_reporter.rs  scanner.rs  text_processor.rs  unused_detector.rs  utils.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts
src/app/components/config-editor/: config-editor.component.css  config-editor.component.html  config-editor.component.spec.ts  config-editor.component.ts
src/app/components/css-extension-selector/: css-extension-selector.component.css  css-extension-selector.component.html  css-extension-selector.component.spec.ts  css-extension-selector.component.ts
src/app/components/debug-window/: debug-window.component.css  debug-window.component.html  debug-window.component.spec.ts  debug-window.component.ts
src/app/components/directory-selector/: directory-selector.component.css  directory-selector.component.html  directory-selector.component.spec.ts  directory-selector.component.ts
src/app/components/file-type-selector/: file-type-selector.component.css  file-type-selector.component.html  file-type-selector.component.spec.ts  file-type-selector.component.ts
src/app/components/folder-tree/: folder-tree.component.css  (+2 more)
src/environments/: environment.prod.ts  environment.ts
(+37 files in other folders)
